# lv_port_pc_visual_studio

LvglWindowsSimulator/: LvglWindowsSimulator.cpp  LvglWindowsSimulator.vcxproj  LvglWindowsSimulator.vcxproj.filters  lv_conf.h  resource.h
LvglWindowsSimulator/test/: CMakeLists.txt  ui_app.c  ui_app.h
LvglWindowsSimulator/test/home/: CMakeLists.txt  home.c  home.h  home_cfg.c
LvglWindowsSimulator/test/icons/: CMakeLists.txt  about_icon.c  comfort_icon.c  cool_icon.c  decrease_icon.c  display_icon.c  eco_mode_icon.c  fan_auto_icon.c  fan_high_icon.c  fan_low_icon.c  fan_mid_icon.c  heat_icon.c  increase_icon.c  is_latest_version_icon.c  network_icon.c  non_latest_version_icon.c  power_icon.c  rs485_icon.c  scenario_icon.c  server_icon.c  settings_icon.c  time_icon.c  ui_icons.h  ventilation_icon.c  wifi_connected_icon.c  wifi_disconnect_icon.c  wifi_set_icon.c
LvglWindowsSimulator/test/idle/: CMakeLists.txt  idle_cfg.c  idle_page.c  idle_page.h
LvglWindowsSimulator/test/settings/: CMakeLists.txt  settings_cfg.c  settings_cfg.h
LvglWindowsSimulator/test/settings/advanced_settings/: CMakeLists.txt  advanced_settings.c  advanced_settings.h  config_item.h
LvglWindowsSimulator/test/settings/display_settings/: CMakeLists.txt  display_settings.c  display_settings.h
LvglWindowsSimulator/test/settings/machine_info/: CMakeLists.txt  machine_info.c  machine_info.h
LvglWindowsSimulator/test/ui_manager/: CMakeLists.txt  lv_font_CN_Bold_2.c  lv_font_CN_HeiTi_Google_2.c  page_manager.c  page_manager.h  ui_common.c  ui_common.h
(+16 files in other folders)
