
idf_component_register(SRCS "cool_icon.c" "heat_icon.c" "comfort_icon.c"
    "decrease_icon.c" "increase_icon.c" "fan_low_icon.c" "fan_mid_icon.c" "fan_high_icon.c"
    "fan_auto_icon.c" "power_icon.c" "settings_icon.c" "eco_mode_icon.c" "display_icon.c"
    "scenario_icon.c" "increase_icon.c" "decrease_icon.c" "wifi_connected_icon.c" "wifi_disconnect_icon.c"
    "ventilation_icon.c" "network_icon.c" "time_icon.c" "about_icon.c" "rs485_icon.c" "wifi_set_icon.c"
    "server_icon.c" "is_latest_version_icon.c" "non_latest_version_icon.c"
    INCLUDE_DIRS "."
    REQUIRES "lvgl")
